--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ body{
     /* margin: 0px 0px 0px 97px; */
 }
 .menu {
-    padding: 5px 0;
+    padding: 0 100px 0 5px;
 }
 .menu__list {
     flex-wrap: wrap;
@@ -157,7 +157,7 @@ body{
 
 .header__basket {
     margin: 0 0 0 30px;
-    padding-left: 200px;
+    
 }
 .basketFull {
     width: 30px;
